Add styles to webpack.config.js; Implement modules for webpack.config.js;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist/public/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "target": "ES6",
     "module": "ES2015",
     "jsx": "react",
