--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "typescript": "^4.4.3",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.173",
+    "lodash": "^4.17.21"
   }
 }
